@@ -1,0 +1,3 @@
+<object name="portal_catalog">
+    <column value="has_sametype_children" />
+</object>
