@@ -17,6 +17,7 @@ Changelog
 - Workspaces do no longer inherit from dossiers. [elioschmutz]
 - Optimise local roles security reindexing in tasks. [Rotonen]
 - Add keywords-filter for document listings. [njohner]
+- Add has_sametype_children metadata column. [njohner]
 - Show dossier from template action also when adding dossier disallowed. [njohner]
 - Improve task restriction query, so that it works also on oracle backends. [phgross]
 - Add restapi @journal endpoint to get journal entries. [elioschmutz]
